mac: Fix flashing of grey at tab creation, destruction, etc

The ContentsWebView behind our WebContents is colored dark for tab
capture's letterbox mode.

On Aura, this is always covered up by the content::RenderWidgetHostView,
which adds its own ui::Layers into the heirarchy.

In MacViewsBrowser the content::RenderWidgetHostView is an NSView
which is updated asynchronously to the ui::Compositor, which can result
in flashes at any number of times (resize, creation, removal, etc).

Change ContentsWebView to receive a callback when we are in tab capture
letterbox mode, and only change its background to be dark when we are
in that mode.

Bug: 826286
Change-Id: I89b3961da01d35f61da6717db659f87b9701ef5d
Reviewed-on: https://chromium-review.googlesource.com/999267
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549045}
Former-commit-id: bca650f44b0a42e4faa87aaf09018a232dbac9f7